fixed bad white-space tek which attempted to wrap long links / words to next line. instead it did that, but made massive paragraph spacing. switched overflow: hidden for now

--- a/app/sass/_mixins.sass
+++ b/app/sass/_mixins.sass
@@ -63,11 +63,12 @@
 
 // long-line text wrapping
 =wrap
-  white-space: pre-wrap /* css-3 */
-  white-space: -moz-pre-wrap !important /* Mozilla, since 1999 */
-  white-space: -pre-wrap /* Opera 4-6 */
-  white-space: -o-pre-wrap /* Opera 7 */
-  word-wrap: break-word /* Internet Explorer 5.5+ */
+  +overflow
+  // white-space: pre-wrap /* css-3 */
+  // white-space: -moz-pre-wrap !important /* Mozilla, since 1999 */
+  // white-space: -pre-wrap /* Opera 4-6 */
+  // white-space: -o-pre-wrap /* Opera 7 */
+  // word-wrap: break-word /* Internet Explorer 5.5+ */
 
 
 // CURSORS
